salesforce/force-app/main/default/objects/Meeting_Note__c/Meeting_Note__c.object-meta.xml
<CustomObject>
    <label>Meeting Note</label>
    <pluralLabel>Meeting Notes</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Note Number</label>
        <displayFormat>Note-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>