salesforce/force-app/main/default/objects/Meeting_Note__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>Action Items</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>