salesforce/force-app/main/default/objects/Meeting_Note__c/fields/Meeting_Prep__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Prep__c</fullName>
    <label>Meeting Prep</label>
    <type>Lookup</type>
    <referenceTo>Meeting_Prep__c</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
</CustomField>