salesforce/force-app/main/default/objects/Meeting_Note__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>