salesforce/force-app/main/default/objects/Meeting_Note__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>